added back missing lnhpd files corrected spelling typo

--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -464,7 +464,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>company_id</strong></td>
-                                    <td>The companty identification number.</td>
+                                    <td>The company identification number.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>company_name</strong></td>
